# fun_coding_questions

./: .gitignore  CMakeLists.txt  README.md
cert_chain_parsing/: README.md
cert_chain_parsing/sslcert/: generate_certificates.sh  interviewee.cnf  root.cnf
cert_chain_parsing/sslcert/src/: CMakeLists.txt  build.sh  certinfo.c
gf2_matrix_ops/: CMakeLists.txt  README.md  build.sh
gf2_matrix_ops/include/: gf2_matrix.h
gf2_matrix_ops/src/: gf2_matrix.c  main.c
multiply_large_integers/: README.md
videoinfo/: CMakeLists.txt  README.md  configure.sh  mpg_to_yuv.sh
videoinfo/src/: main.cpp
